<resources>


    <string name="app_name">Go4Lunch</string>

    <!--LOGOS and BUTTONS-->
    <string name="go_for_lunch_logo_authentication">Go for lunch logo</string>
    <string name="sign_in_with_facebook_authentication">Sign in with Facebook</string>
    <string name="sign_in_with_google_authentication">Sign in with google</string>
    <string name="map_view_title_bottom_nav_menu">Map View</string>
    <string name="list_view_title_bottom_nav_menu">List View</string>
    <string name="workmates_title_bottom_nav_menu">Workmates</string>

    <!-- TEXT VIEWS -->
    <string name="restaurant_name_restaurant_detail">Restaurant name</string>
    <string name="food_style_address_restaurant_detail">Food style - Address</string>
    <string name="text_for_call_button_restaurant_detail">CALL</string>
    <string name="text_for_like_button_restaurant_detail">LIKE</string>
    <string name="text_for_website_button_restaurant_detail">WEBSITE</string>
    <string name="user_selected_restaurant_text_colleague_items">User X is eating YYYY(restaurant)</string>
    <string name="restaurant_name_text_restaurant_items">Restaurant Name</string>
    <string name="distance_text_restaurant_items">distance</string>
    <string name="food_style_address_text_restaurant_items">food style - address</string>
    <string name="opening_time_text_restaurant_items">opening time</string>
    <string name="find_a_nice_restaurant_and_invite_your_co_workers_for_lunch">Find a nice restaurant and invite your co-workers for lunch!</string>
    <string name="_2">(2)</string>
    <string name="date">date</string>
    <string name="user_name">User Name</string>


    <!-- CONTENT DESCRIPTION -->
    <string name="restaurant_photo_content_description_restaurant_detail">Photo of the restaurant</string>
    <string name="restaurant_button_content_description_restaurant_detail">Call restaurant button</string>
    <string name="opinion_star_detail_content_description_restaurant_detail">Average opinion</string>
    <string name="call_restaurant_content_description_restaurant_detail">Call restaurant button</string>
    <string name="web_site_button_content_description_restaurant_detail">Visit the restaurant website</string>
    <string name="colleague_avatar_content_description_colleague_items">Colleague avatar</string>
    <string name="restaurant_photo_content_description_restaurant_items">Restaurant photo</string>
    <string name="toolbar_menu_icon_content_description_activity_main">Menu Icon</string>
    <string name="dinner_with_friend_background">dinner with friend background</string>
    <string name="interested_colleague_logo">interested colleague logo</string>
    <string name="star_logo">star logo</string>

    <!-- MAPS -->
    <string name="maps_token_title">My position</string>

    <!-- WARNING MESSAGES -->
    <string name="google_auth_failed">Your authentication with Google have failed, please try again</string>
    <string name="facebook_auth_failed">Your authentication with Facebook have failed, please try again</string>
    <string name="facebook_auth_canceled">Your authentication with Facebook has been canceled, please try again</string>
    <string name="invalid_authentication">"You are not authenticate, please authenticate."</string>

    <!-- LOGIN MESSAGES -->
    <string name="welcome_message">"Welcome "</string>
    <string name="welcome_back_message">"Welcome back "</string>

    <!-- DRAWER MENU -->
    <string name="user_avatar_drawer_menu">User Avatar</string>
    <string name="user_mail_drawer_menu">User Mail</string>
    <string name="your_lunch_drawer_menu_title">YOUR LUNCH</string>
    <string name="settings_drawer_menu_title">SETTINGS</string>
    <string name="logout_drawer_menu_title">LOGOUT</string>
    <string name="chat_drawer_menu_title">CHAT</string>

    <!-- NAV GRAPH LABEL -->
    <string name="i_am_hungry_title">I\'m Hungry!</string>
    <string name="available_workmates">Available workmates</string>

    <!-- CONSTANT -->
    <string name="chanel_id">fcm_default_channel</string>
    <string name="chanel_name">Message from Firebase</string>
    <string name="intent_extra_name">message</string>
    <string name="public_profile">public_profile</string>
    <string name="exception">Exception: %s</string>

    <!-- WORKMATE_ADAPTER -->
    <string name="is_eating"> \u0020is eating\u0020 </string>
    <string name="has_not_decide"> \u0020hasn\'t decided yet</string>
    <string name="is_joining"> \u0020is joining!</string>

    <!-- RESTAURANT_LIST_ADAPTER -->
    <string name="closed">Closed</string>
    <string name="email">email</string>

    <!-- RESTAURANT_DETAIL -->
    <string name="like_restaurant_question">Like this restaurant ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="tel">tel: </string>
    <string name="open_until">Open until :\u0020</string>


    <!-- NOTIFICATION -->
    <string name="notification_you_are_eating">You are eating in :\u0020 </string>
    <string name="notification_at"> \u0020at :\u0020 </string>
    <string name="notification_with"> \u0020with :\u0020 </string>
    <string name="today_lunch">Today\'s Lunch</string>


    <!-- CHAT -->
    <string name="enter_your_message_here">Enter your message here</string>
    <string name="English">En</string>
    <string name="French">Fr</string>

    <!-- SETTINGS -->
    <string name="change_settings">Change settings options</string>
    <string name="haven_t_chose_restaurant">You haven\'t choose a restaurant yet</string>
    <string name="search_restaurants">Search restaurants</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="cancel_reservation">CANCEL RESERVATION</string>
    <string name="save_changes">Save changes</string>
    <string name="on_error">An error have occurred, please check your parameters and try again</string>

</resources>