<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/your_lunch_drawer_layout"
        android:enabled="true"
        android:icon="@drawable/ic_lunch_icon"
        android:title="@string/your_lunch_drawer_menu_title" />
    <item
        android:id="@+id/settings_drawer_layout"
        android:enabled="true"
        android:icon="@drawable/ic_settings_icon"
        android:title="@string/settings_drawer_menu_title" />
    <item
        android:id="@+id/logout_drawer_layout"
        android:enabled="true"
        android:icon="@drawable/ic_logout_icon"
        android:title="@string/logout_drawer_menu_title"
        />
    <item
        android:id="@+id/chat_drawer_layout"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_24"
        android:title="@string/chat_drawer_menu_title"
        />

</menu>